un-do return values for failed models for issue #123

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ S3method(predict,model_fit)
 S3method(predict,model_spec)
 S3method(predict,nullmodel)
 S3method(predict_class,"_lognet")
+S3method(predict_class,"_multnet")
 S3method(predict_classprob,"_lognet")
 S3method(predict_classprob,"_multnet")
 S3method(predict_numeric,"_elnet")
