first attempt at getting around CXX14 travis issues

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,14 @@ r:
 - release
 - devel
 
+
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-6
+
 env:
   global:
   - KERAS_BACKEND="tensorflow"
@@ -69,6 +77,9 @@ before_install:
   - sudo apt-get -y install libnlopt-dev 
   - sudo apt-get update
   - sudo apt-get -y install python3
+  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-6 100
+  - echo "** Overriding src/Makevars and removing C++14 on Travis only"
+  - sed -i 's|CXX_STD = CXX14||' src/Makevars  
 
 after_success:
   - Rscript -e 'covr::codecov()'
