trying to avoid travis failures for devtools
```
* installing *source* package ‘devtools’ ...
** package ‘devtools’ successfully unpacked and MD5 sums checked
** R
** inst
** byte-compile and prepare package for lazy loading
Error in loadNamespace(j <- i[[1L]], c(lib.loc, .libPaths()), versionCheck = vI[[j]]) :
  there is no package called ‘magrittr’
ERROR: lazy loading failed for package ‘devtools’
* removing ‘/home/travis/R/Library/devtools’
* restoring previous ‘/home/travis/R/Library/devtools’
The downloaded source packages are in
	‘/tmp/RtmpUhu1j4/downloaded_packages’
Warning message:
In install.packages(c("devtools")) :
  installation of package ‘devtools’ had non-zero exit status
```

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,11 @@ matrix:
     - r: 3.1
     - r: 3.2
 
+r_binary_packages: 
+ - devtools
+ - magrittr
+
+
 env:
   global:
   - KERAS_BACKEND="tensorflow"
