Added FNN engine

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -111,6 +111,7 @@ export(translate)
 export(varying)
 export(varying_args)
 export(xgb_train)
+export(fnn_train)
 importFrom(dplyr,arrange)
 importFrom(dplyr,as_tibble)
 importFrom(dplyr,bind_cols)
