--- a/NAMESPACE
+++ b/NAMESPACE
@@ -112,6 +112,7 @@ export(varying)
 export(varying_args)
 export(xgb_train)
 export(fnn_train)
+export(fnn_pred)
 importFrom(dplyr,arrange)
 importFrom(dplyr,as_tibble)
 importFrom(dplyr,bind_cols)
