--- a/NAMESPACE
+++ b/NAMESPACE
@@ -76,6 +76,7 @@ export(.preds)
 export(.x)
 export(.y)
 export(C5.0_train)
+export(add_rowindex)
 export(boost_tree)
 export(check_empty_ellipse)
 export(decision_tree)
