--- a/NAMESPACE
+++ b/NAMESPACE
@@ -84,6 +84,8 @@ export(fit.model_spec)
 export(fit_control)
 export(fit_xy)
 export(fit_xy.model_spec)
+export(fnn_pred)
+export(fnn_train)
 export(keras_mlp)
 export(linear_reg)
 export(logistic_reg)
