--- a/NAMESPACE
+++ b/NAMESPACE
@@ -78,13 +78,19 @@ export(.y)
 export(C5.0_train)
 export(add_rowindex)
 export(boost_tree)
+export(check_arg_val)
 export(check_empty_ellipse)
+export(check_engine_val)
+export(check_func_val)
+export(check_mod_val)
+export(check_mode_val)
 export(decision_tree)
 export(fit)
 export(fit.model_spec)
 export(fit_control)
 export(fit_xy)
 export(fit_xy.model_spec)
+export(get_model_env)
 export(keras_mlp)
 export(linear_reg)
 export(logistic_reg)
@@ -99,16 +105,25 @@ export(null_model)
 export(nullmodel)
 export(predict.model_fit)
 export(rand_forest)
+export(register_dependency)
+export(register_fit)
+export(register_model_arg)
+export(register_model_engine)
+export(register_model_mode)
+export(register_new_model)
+export(register_pred)
 export(rpart_train)
 export(set_args)
 export(set_engine)
 export(set_mode)
 export(show_call)
+export(show_model_info)
 export(surv_reg)
 export(svm_poly)
 export(svm_rbf)
 export(tidy.model_fit)
 export(translate)
+export(validate_model)
 export(varying)
 export(varying_args)
 export(xgb_train)
