dependencies, fit, and predict

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -81,9 +81,11 @@ export(boost_tree)
 export(check_arg_val)
 export(check_empty_ellipse)
 export(check_engine_val)
+export(check_fit_info)
 export(check_func_val)
 export(check_mod_val)
 export(check_mode_val)
+export(check_pred_info)
 export(decision_tree)
 export(fit)
 export(fit.model_spec)
