changed register to set; restructured the pkg information

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -85,6 +85,7 @@ export(check_fit_info)
 export(check_func_val)
 export(check_mod_val)
 export(check_mode_val)
+export(check_pkg_val)
 export(check_pred_info)
 export(decision_tree)
 export(fit)
@@ -92,7 +93,10 @@ export(fit.model_spec)
 export(fit_control)
 export(fit_xy)
 export(fit_xy.model_spec)
+export(get_dependency)
+export(get_fit)
 export(get_model_env)
+export(get_pred_type)
 export(keras_mlp)
 export(linear_reg)
 export(logistic_reg)
@@ -107,17 +111,17 @@ export(null_model)
 export(nullmodel)
 export(predict.model_fit)
 export(rand_forest)
-export(register_dependency)
-export(register_fit)
-export(register_model_arg)
-export(register_model_engine)
-export(register_model_mode)
-export(register_new_model)
-export(register_pred)
 export(rpart_train)
 export(set_args)
+export(set_dependency)
 export(set_engine)
+export(set_fit)
 export(set_mode)
+export(set_model_arg)
+export(set_model_engine)
+export(set_model_mode)
+export(set_new_model)
+export(set_pred)
 export(show_call)
 export(show_model_info)
 export(surv_reg)
