Added submodel info for issue #167

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -87,6 +87,7 @@ export(check_mod_val)
 export(check_mode_val)
 export(check_pkg_val)
 export(check_pred_info)
+export(check_submodels_val)
 export(decision_tree)
 export(fit)
 export(fit.model_spec)
