added a translate function for knn

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,7 @@ S3method(translate,decision_tree)
 S3method(translate,default)
 S3method(translate,mars)
 S3method(translate,mlp)
+S3method(translate,nearest_neighbor)
 S3method(translate,rand_forest)
 S3method(translate,surv_reg)
 S3method(translate,svm_poly)
