--- a/NAMESPACE
+++ b/NAMESPACE
@@ -96,6 +96,7 @@ export(fit_xy)
 export(fit_xy.model_spec)
 export(get_dependency)
 export(get_fit)
+export(get_from_env)
 export(get_model_env)
 export(get_pred_type)
 export(keras_mlp)
