another exclusions with notes

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,9 @@ r:
 
 matrix:
   allow_failures:
-    - r: 3.2
-    - r: 3.5  
+    - r: 3.3       # inum      install failure (seg fault)
+    - r: 3.2       # partykit  install failure (libcoin needs >= 3.4.0)
+    - r: 3.5       # rmarkdown install failure  
 
 r_binary_packages: 
   - RCurl
