--- a/NAMESPACE
+++ b/NAMESPACE
@@ -104,6 +104,7 @@ export(nearest_neighbor)
 export(null_model)
 export(nullmodel)
 export(pred_types)
+export(pred_value_template)
 export(predict.model_fit)
 export(rand_forest)
 export(rpart_train)
