restructured documentation for model devel

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -103,7 +103,6 @@ export(multinom_reg)
 export(nearest_neighbor)
 export(null_model)
 export(nullmodel)
-export(pred_types)
 export(pred_value_template)
 export(predict.model_fit)
 export(rand_forest)
@@ -111,7 +110,9 @@ export(rpart_train)
 export(set_args)
 export(set_dependency)
 export(set_engine)
+export(set_env_val)
 export(set_fit)
+export(set_in_env)
 export(set_mode)
 export(set_model_arg)
 export(set_model_engine)
