--- a/NAMESPACE
+++ b/NAMESPACE
@@ -210,3 +210,4 @@ importFrom(utils,capture.output)
 importFrom(utils,getFromNamespace)
 importFrom(utils,globalVariables)
 importFrom(utils,head)
+importFrom(vctrs,vec_unique)
