--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ language: r
 dist: trusty
 sudo: true
 
+cran: https://cran.rstudio.com
+
 # until generics is finalized
 warnings_are_errors: false
 
@@ -20,7 +22,7 @@ matrix:
   allow_failures:
     - r: 3.3       # inum      install failure (seg fault)
     - r: 3.2       # partykit  install failure (libcoin needs >= 3.4.0)
-    - r: 3.4       # mvtnorm requires >= 3.5.0 
+    - r: 3.4       # mvtnorm requires >= 3.5.0
 
 cache:
   directories:
@@ -46,12 +48,12 @@ before_script:
 
 
 before_install:
-  - sudo apt-get -y install libnlopt-dev 
+  - sudo apt-get -y install libnlopt-dev
   - sudo apt-get update
   - sudo apt-get -y install python3
   - mkdir -p ~/.R && echo "CXX14=g++-6" > ~/.R/Makevars
   - echo "CXX14FLAGS += -fPIC" >> ~/.R/Makevars
- 
+
 
 after_success:
   - Rscript -e 'covr::codecov()'
