putting caches back

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,37 @@ matrix:
     - r: 3.2       # partykit  install failure (libcoin needs >= 3.4.0)
     - r: 3.4       # mvtnorm   requires >= 3.5.0
 
+r_binary_packages: 
+  - RCurl
+  - dplyr
+  - glue
+  - magrittr
+  - stringi
+  - stringr
+  - munsell
+  - rlang
+  - reshape2
+  - scales
+  - tibble
+  - ggplot2
+  - Rcpp
+  - RcppEigen
+  - BH
+  - glmnet
+  - earth
+  - sparklyr
+  - flexsurv
+  - ranger
+  - randomforest
+  - xgboost
+  - C50
 
+
+cache:
+  packages: true
+  directories:
+    - $HOME/.keras
+    - $HOME/.cache/pip
 
 env:
   global:
