--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,9 @@
 
 S3method(fit,model_spec)
 S3method(fit_xy,model_spec)
+S3method(has_multi_pred,default)
+S3method(has_multi_pred,model_fit)
+S3method(has_multi_pred,workflow)
 S3method(multi_predict,"_C5.0")
 S3method(multi_predict,"_earth")
 S3method(multi_predict,"_elnet")
@@ -91,6 +94,7 @@ export(get_fit)
 export(get_from_env)
 export(get_model_env)
 export(get_pred_type)
+export(has_multi_pred)
 export(keras_mlp)
 export(linear_reg)
 export(logistic_reg)
@@ -210,4 +214,5 @@ importFrom(utils,capture.output)
 importFrom(utils,getFromNamespace)
 importFrom(utils,globalVariables)
 importFrom(utils,head)
+importFrom(utils,methods)
 importFrom(vctrs,vec_unique)
