added a function to get multi_predict arg names

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,9 @@
 
 S3method(fit,model_spec)
 S3method(fit_xy,model_spec)
-S3method(has_multi_pred,default)
-S3method(has_multi_pred,model_fit)
-S3method(has_multi_pred,workflow)
+S3method(has_multi_predict,default)
+S3method(has_multi_predict,model_fit)
+S3method(has_multi_predict,workflow)
 S3method(multi_predict,"_C5.0")
 S3method(multi_predict,"_earth")
 S3method(multi_predict,"_elnet")
@@ -13,6 +13,9 @@ S3method(multi_predict,"_multnet")
 S3method(multi_predict,"_train.kknn")
 S3method(multi_predict,"_xgb.Booster")
 S3method(multi_predict,default)
+S3method(multi_predict_args,default)
+S3method(multi_predict_args,model_fit)
+S3method(multi_predict_args,workflow)
 S3method(nullmodel,default)
 S3method(predict,"_elnet")
 S3method(predict,"_lognet")
@@ -95,7 +98,7 @@ export(get_fit)
 export(get_from_env)
 export(get_model_env)
 export(get_pred_type)
-export(has_multi_pred)
+export(has_multi_predict)
 export(keras_mlp)
 export(linear_reg)
 export(logistic_reg)
@@ -104,6 +107,7 @@ export(mars)
 export(mlp)
 export(model_printer)
 export(multi_predict)
+export(multi_predict_args)
 export(multinom_reg)
 export(nearest_neighbor)
 export(null_model)
