code to compute the minimum tuning grid

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,12 @@ S3method(fit_xy,model_spec)
 S3method(has_multi_predict,default)
 S3method(has_multi_predict,model_fit)
 S3method(has_multi_predict,workflow)
+S3method(min_grid,boost_tree)
+S3method(min_grid,linear_reg)
+S3method(min_grid,logistic_reg)
+S3method(min_grid,mars)
+S3method(min_grid,multinom_reg)
+S3method(min_grid,nearest_neighbor)
 S3method(multi_predict,"_C5.0")
 S3method(multi_predict,"_earth")
 S3method(multi_predict,"_elnet")
@@ -104,6 +110,13 @@ export(linear_reg)
 export(logistic_reg)
 export(make_classes)
 export(mars)
+export(min_grid)
+export(min_grid.boost_tree)
+export(min_grid.linear_reg)
+export(min_grid.logistic_reg)
+export(min_grid.mars)
+export(min_grid.multinom_reg)
+export(min_grid.nearest_neighbor)
 export(mlp)
 export(model_printer)
 export(multi_predict)
