more linear regression glmnet updates for #195

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,7 @@ S3method(print,svm_rbf)
 S3method(translate,boost_tree)
 S3method(translate,decision_tree)
 S3method(translate,default)
+S3method(translate,linear_reg)
 S3method(translate,mars)
 S3method(translate,mlp)
 S3method(translate,nearest_neighbor)
