updates for other glmnet models #195

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,8 +57,10 @@ S3method(translate,boost_tree)
 S3method(translate,decision_tree)
 S3method(translate,default)
 S3method(translate,linear_reg)
+S3method(translate,logistic_reg)
 S3method(translate,mars)
 S3method(translate,mlp)
+S3method(translate,multinom_reg)
 S3method(translate,nearest_neighbor)
 S3method(translate,rand_forest)
 S3method(translate,surv_reg)
