more documentation and updates

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -81,6 +81,8 @@ navbar:
        href: articles/articles/Classification.html    
      - text: Making a parsnip model from scratch
        href: articles/articles/Scratch.html   
+     - text: Evaluating submodels with the same model object 
+       href: articles/articles/Submodels.html   
   - text: News
     href: news/index.html           
   - text: Reference
