--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,10 +1,11 @@
-pandoc: 2.0.5
-pkgdown: 1.3.0.9000
-pkgdown_sha: 0b2c27d41b869ac31b6a46815940f55b12f6171f
+pandoc: 2.3.1
+pkgdown: 1.3.0.9100
+pkgdown_sha: 71070c3aa5cbff0bffd5bdc599f0fffbd5065142
 articles:
   Classification: articles/Classification.html
   Models: articles/Models.html
   Regression: articles/Regression.html
   Scratch: articles/Scratch.html
+  Submodels: articles/Submodels.html
   parsnip_Intro: parsnip_Intro.html
 
