removed older versions from building + binary testthat

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,6 @@ cran: https://cran.rstudio.com
 warnings_are_errors: false
 
 r:
-  - 3.2
-  - 3.3
-  - 3.4
   - 3.5
   - 3.6
   - devel
@@ -49,7 +46,7 @@ r_binary_packages:
   - xgboost
   - C50
   - reticulate
-  - scales
+  - testthat
 
 
 cache:
