--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: parsnip
-Version: 0.0.3.9000
+Version: 0.0.3.1
 Title: A Common API to Modeling and Analysis Functions
 Description: A common interface is provided to allow users to specify a model without having to remember the different argument names across different functions or computational engines (e.g. 'R', 'Spark', 'Stan', etc). 
 Authors@R: c(
-    person("Max", "Kuhn", , "max@rstudio.com", c("aut", "cre")),
-    person("Davis", "Vaughan", , "davis@rstudio.com", c("aut")),
+    person(given = "Max",   family = "Kuhn",    email = "max@rstudio.com",   role = c("aut", "cre")),
+    person(given = "Davis", family = "Vaughan", email = "davis@rstudio.com", role = c("aut")),
     person("RStudio", role = "cph"))
 Maintainer: Max Kuhn <max@rstudio.com>
 URL: https://tidymodels.github.io/parsnip
