added a min_grid method for missing submodels

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ S3method(min_grid,boost_tree)
 S3method(min_grid,linear_reg)
 S3method(min_grid,logistic_reg)
 S3method(min_grid,mars)
+S3method(min_grid,model_spec)
 S3method(min_grid,multinom_reg)
 S3method(min_grid,nearest_neighbor)
 S3method(multi_predict,"_C5.0")
