newly exported functions used for external packages

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -90,6 +90,7 @@ export(C5.0_train)
 export(add_rowindex)
 export(boost_tree)
 export(check_empty_ellipse)
+export(check_final_param)
 export(control_parsnip)
 export(decision_tree)
 export(fit)
@@ -103,6 +104,7 @@ export(get_from_env)
 export(get_model_env)
 export(get_pred_type)
 export(has_multi_predict)
+export(is_varying)
 export(keras_mlp)
 export(linear_reg)
 export(logistic_reg)
@@ -114,7 +116,9 @@ export(multi_predict)
 export(multi_predict_args)
 export(multinom_reg)
 export(nearest_neighbor)
+export(new_model_spec)
 export(null_model)
+export(null_value)
 export(nullmodel)
 export(pred_value_template)
 export(predict.model_fit)
@@ -133,12 +137,15 @@ export(set_model_mode)
 export(set_new_model)
 export(set_pred)
 export(show_call)
+export(show_fit)
 export(show_model_info)
 export(surv_reg)
 export(svm_poly)
 export(svm_rbf)
 export(tidy.model_fit)
 export(translate)
+export(update_dot_check)
+export(update_main_parameters)
 export(varying)
 export(varying_args)
 export(xgb_train)
