Change warning() to rlang::warn()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ S3method(print,rand_forest)
 S3method(print,surv_reg)
 S3method(print,svm_poly)
 S3method(print,svm_rbf)
+S3method(tidy,model_fit)
 S3method(translate,boost_tree)
 S3method(translate,decision_tree)
 S3method(translate,default)
@@ -142,7 +143,6 @@ export(show_model_info)
 export(surv_reg)
 export(svm_poly)
 export(svm_rbf)
-export(tidy.model_fit)
 export(translate)
 export(update_dot_check)
 export(update_main_parameters)
