--- a/NAMESPACE
+++ b/NAMESPACE
@@ -98,6 +98,7 @@ export(boost_tree)
 export(check_empty_ellipse)
 export(check_final_param)
 export(control_parsnip)
+export(convert_args)
 export(convert_stan_interval)
 export(decision_tree)
 export(eval_args)
