missed exporting the predict_raw generic in v 0.1.0

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -137,6 +137,7 @@ export(predict_confint.model_fit)
 export(predict_numeric)
 export(predict_numeric.model_fit)
 export(predict_quantile.model_fit)
+export(predict_raw)
 export(predict_raw.model_fit)
 export(rand_forest)
 export(rpart_train)
