--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -13,6 +13,7 @@ jobs:
       matrix:
         config:
         - { os: windows-latest, r: '3.6'}
+        - { os: windows-latest, r: '4.0'}
         - { os: windows-latest, r: 'devel'}
         - { os: ubuntu-16.04, r: '3.5', cran: "https://demo.rstudiopm.com/all/__linux__/xenial/latest"}
         - { os: ubuntu-16.04, r: '3.6', cran: "https://demo.rstudiopm.com/all/__linux__/xenial/latest"}
