initial work on #290

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -108,6 +108,7 @@ export(fit_control)
 export(fit_xy)
 export(fit_xy.model_spec)
 export(get_dependency)
+export(get_encoding)
 export(get_fit)
 export(get_from_env)
 export(get_model_env)
@@ -143,6 +144,7 @@ export(rand_forest)
 export(rpart_train)
 export(set_args)
 export(set_dependency)
+export(set_encoding)
 export(set_engine)
 export(set_env_val)
 export(set_fit)
