tidy nullmodel method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -160,6 +160,7 @@ export(surv_reg)
 export(svm_poly)
 export(svm_rbf)
 export(tidy.model_fit)
+export(tidy.nullmodel)
 export(translate)
 export(translate.default)
 export(update_dot_check)
