s3 registration of tidy methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,8 @@ S3method(print,rand_forest)
 S3method(print,surv_reg)
 S3method(print,svm_poly)
 S3method(print,svm_rbf)
+S3method(tidy,model_fit)
+S3method(tidy,nullmodel)
 S3method(translate,boost_tree)
 S3method(translate,decision_tree)
 S3method(translate,default)
@@ -159,8 +161,7 @@ export(show_model_info)
 export(surv_reg)
 export(svm_poly)
 export(svm_rbf)
-export(tidy.model_fit)
-export(tidy.nullmodel)
+export(tidy)
 export(translate)
 export(translate.default)
 export(update_dot_check)
@@ -187,6 +188,7 @@ importFrom(dplyr,tally)
 importFrom(dplyr,vars)
 importFrom(generics,fit)
 importFrom(generics,fit_xy)
+importFrom(generics,tidy)
 importFrom(generics,varying_args)
 importFrom(glue,glue_collapse)
 importFrom(magrittr,"%>%")
