--- a/docs/dev/pkgdown.yml
+++ b/docs/dev/pkgdown.yml
@@ -1,6 +1,6 @@
 pandoc: 2.9.2.1
-pkgdown: 1.4.1.9000
-pkgdown_sha: b7045baef5c241c61ecf06d95b8bd4f12a3fc622
+pkgdown: 1.5.1
+pkgdown_sha: ~
 articles:
   Classification: articles/Classification.html
   Models: articles/Models.html
@@ -8,5 +8,5 @@ articles:
   Scratch: articles/Scratch.html
   Submodels: articles/Submodels.html
   parsnip_Intro: parsnip_Intro.html
-last_built: 2020-05-08T23:10Z
+last_built: 2020-05-08T23:17Z
 
