model-specific changes for #315

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -142,6 +142,7 @@ export(predict_quantile.model_fit)
 export(predict_raw)
 export(predict_raw.model_fit)
 export(rand_forest)
+export(repair_call)
 export(rpart_train)
 export(set_args)
 export(set_dependency)
