--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -41,6 +41,12 @@ jobs:
           remotes::install_cran("covr")
         shell: Rscript {0}
 
+      - name: Install TensorFlow
+        run: |
+          Rscript -e "reticulate::install_miniconda()"
+          Rscript -e "reticulate::conda_create('r-reticulate', packages = 'python==3.6.9')"
+          Rscript -e "tensorflow::install_tensorflow(version='1.14.0')"
+
       - name: Test coverage
         run: covr::codecov()
         shell: Rscript {0}
