--- a/docs/dev/pkgdown.yml
+++ b/docs/dev/pkgdown.yml
@@ -1,6 +1,6 @@
 pandoc: 2.9.2.1
-pkgdown: 1.5.1
-pkgdown_sha: ~
+pkgdown: 1.5.1.9000
+pkgdown_sha: ac78596154e403df5f4e683f2185d88225a0fea6
 articles:
   Classification: articles/Classification.html
   Models: articles/Models.html
@@ -8,7 +8,7 @@ articles:
   Scratch: articles/Scratch.html
   Submodels: articles/Submodels.html
   parsnip_Intro: parsnip_Intro.html
-last_built: 2020-05-11T17:19Z
+last_built: 2020-05-27T00:06Z
 urls:
   reference: https://parsnip.tidymodels.org/reference
   article: https://parsnip.tidymodels.org/articles
