check and load pacakges in `predict()` for #308

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,8 @@ S3method(print,rand_forest)
 S3method(print,surv_reg)
 S3method(print,svm_poly)
 S3method(print,svm_rbf)
+S3method(req_pkgs,model_fit)
+S3method(req_pkgs,model_spec)
 S3method(tidy,model_fit)
 S3method(tidy,nullmodel)
 S3method(translate,boost_tree)
@@ -144,6 +146,7 @@ export(predict_raw)
 export(predict_raw.model_fit)
 export(rand_forest)
 export(repair_call)
+export(req_pkgs)
 export(rpart_train)
 export(set_args)
 export(set_dependency)
