--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -36,6 +36,7 @@ jobs:
           remotes::install_deps(dependencies = TRUE)
           remotes::install_dev("pkgdown")
           remotes::install_github("tidyverse/tidytemplate")
+          remotes::install_github("tidyverse/tidymodels")
         shell: Rscript {0}
 
       - name: Install package
