--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -70,6 +70,11 @@ jobs:
           remotes::install_cran("rcmdcheck")
         shell: Rscript {0}
 
+      - name: Set Miniconda path
+        if: runner.os == 'MacOS'
+        env:
+          RETICULATE_MINICONDA_PATH: 'miniconda/'
+
       - name: Install TensorFlow
         run: |
           Rscript -e "reticulate::install_miniconda()"
