Try one directory level up for Miniconda

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -73,7 +73,7 @@ jobs:
       - name: Install TensorFlow on macOS and Ubuntu
         if: runner.os != 'Windows'
         env:
-          RETICULATE_MINICONDA_PATH: 'miniconda/'
+          RETICULATE_MINICONDA_PATH: '../miniconda/'
         run: |
           Rscript -e "reticulate::install_miniconda()"
           Rscript -e "reticulate::conda_create('r-reticulate', packages = 'python==3.6.9', conda = 'miniconda/bin/conda')"
