Update location on conda environment

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -76,8 +76,8 @@ jobs:
           RETICULATE_MINICONDA_PATH: '../miniconda/'
         run: |
           Rscript -e "reticulate::install_miniconda()"
-          Rscript -e "reticulate::conda_create('r-reticulate', packages = 'python==3.6.9', conda = 'miniconda/bin/conda')"
-          Rscript -e "tensorflow::install_tensorflow(version='1.14.0', conda = 'miniconda/bin/conda')"
+          Rscript -e "reticulate::conda_create('r-reticulate', packages = 'python==3.6.9', conda = '../miniconda/bin/conda')"
+          Rscript -e "tensorflow::install_tensorflow(version='1.14.0', conda = '../miniconda/bin/conda')"
 
       - name: Install TensorFlow on Windows
         if: runner.os == 'Windows'
