--- a/NAMESPACE
+++ b/NAMESPACE
@@ -101,6 +101,7 @@ export(add_rowindex)
 export(boost_tree)
 export(check_empty_ellipse)
 export(check_final_param)
+export(contr_one_hot)
 export(control_parsnip)
 export(convert_stan_interval)
 export(decision_tree)
