more specific tidy method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,10 @@ S3method(print,svm_poly)
 S3method(print,svm_rbf)
 S3method(req_pkgs,model_fit)
 S3method(req_pkgs,model_spec)
+S3method(tidy,"_elnet")
+S3method(tidy,"_fishnet")
+S3method(tidy,"_lognet")
+S3method(tidy,"_multnet")
 S3method(tidy,model_fit)
 S3method(tidy,nullmodel)
 S3method(translate,boost_tree)
@@ -234,6 +238,7 @@ importFrom(stats,.checkMFClasses)
 importFrom(stats,.getXlevels)
 importFrom(stats,as.formula)
 importFrom(stats,binomial)
+importFrom(stats,coef)
 importFrom(stats,delete.response)
 importFrom(stats,model.frame)
 importFrom(stats,model.matrix)
