added glance method for #325

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(fit,model_spec)
 S3method(fit_xy,model_spec)
+S3method(glance,model_fit)
 S3method(has_multi_predict,default)
 S3method(has_multi_predict,model_fit)
 S3method(has_multi_predict,workflow)
@@ -121,6 +122,7 @@ export(get_fit)
 export(get_from_env)
 export(get_model_env)
 export(get_pred_type)
+export(glance)
 export(has_multi_predict)
 export(is_varying)
 export(keras_mlp)
@@ -198,6 +200,7 @@ importFrom(dplyr,tally)
 importFrom(dplyr,vars)
 importFrom(generics,fit)
 importFrom(generics,fit_xy)
+importFrom(generics,glance)
 importFrom(generics,tidy)
 importFrom(generics,varying_args)
 importFrom(glue,glue_collapse)
