--- a/NAMESPACE
+++ b/NAMESPACE
@@ -177,6 +177,7 @@ export(tidy)
 export(translate)
 export(translate.default)
 export(update_dot_check)
+export(update_engine_parameters)
 export(update_main_parameters)
 export(varying)
 export(varying_args)
