--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -33,6 +33,9 @@ jobs:
       - name: Install dependencies
         run: |
           remotes::install_deps(dependencies = TRUE)
+          remotes::install_github("tidyverse/tidytemplate")
+          remotes::install_cran("tidymodels")
+          remotes::install_cran("C50")
           install.packages("pkgdown")
         shell: Rscript {0}
 
