--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -71,11 +71,11 @@ navbar:
   - text: "Articles"
     menu:
      - text: Regression modeling
-       href: articles/articles/Regression.html
+       href: https://www.tidymodels.org/learn/models/parsnip-ranger-glmnet/
      - text: Classification modeling
-       href: articles/articles/Classification.html
+       href: https://www.tidymodels.org/learn/models/parsnip-nnet/
      - text: Making a parsnip model from scratch
-       href: articles/articles/Scratch.html
+       href: https://www.tidymodels.org/learn/develop/models/
      - text: Evaluating submodels with the same model object
        href: articles/articles/Submodels.html
   - text: News
