more engine docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -168,6 +168,7 @@ export(set_model_mode)
 export(set_new_model)
 export(set_pred)
 export(show_call)
+export(show_engines)
 export(show_fit)
 export(show_model_info)
 export(surv_reg)
