initial loosening of x input format

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -103,6 +103,7 @@ export(.x)
 export(.y)
 export(C5.0_train)
 export(add_rowindex)
+export(as_matrix)
 export(boost_tree)
 export(check_empty_ellipse)
 export(check_final_param)
