--- a/NAMESPACE
+++ b/NAMESPACE
@@ -152,6 +152,7 @@ export(predict_numeric.model_fit)
 export(predict_quantile.model_fit)
 export(predict_raw)
 export(predict_raw.model_fit)
+export(prepare_data)
 export(rand_forest)
 export(repair_call)
 export(req_pkgs)
