Add warnings when the argument is corrected

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -132,6 +132,8 @@ export(make_classes)
 export(mars)
 export(maybe_data_frame)
 export(maybe_matrix)
+export(min_cols)
+export(min_rows)
 export(mlp)
 export(model_printer)
 export(multi_predict)
