export make_call for parsnip-adjacent packages

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -128,6 +128,7 @@ export(is_varying)
 export(keras_mlp)
 export(linear_reg)
 export(logistic_reg)
+export(make_call)
 export(make_classes)
 export(mars)
 export(maybe_data_frame)
