avoid a warning with the new rstanarm package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -177,6 +177,7 @@ export(show_call)
 export(show_engines)
 export(show_fit)
 export(show_model_info)
+export(stan_conf_int)
 export(surv_reg)
 export(svm_poly)
 export(svm_rbf)
