RStudio add-in to write parsnip model spec code

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -188,6 +188,7 @@ export(update_engine_parameters)
 export(update_main_parameters)
 export(varying)
 export(varying_args)
+export(write_parsnip_specs)
 export(xgb_train)
 importFrom(dplyr,arrange)
 importFrom(dplyr,as_tibble)
