Handle single prediction case for multinomial glmnet

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -283,4 +283,5 @@ importFrom(utils,getFromNamespace)
 importFrom(utils,globalVariables)
 importFrom(utils,head)
 importFrom(utils,methods)
+importFrom(vctrs,vec_size)
 importFrom(vctrs,vec_unique)
