updates with extras

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -73,6 +73,21 @@ jobs:
           pak::pkg_install("rcmdcheck")
         shell: Rscript {0}
 
+     - name: Install Miniconda
+        run: |
+          Rscript -e "pak::pkg_install('rstudio/reticulate')"
+          Rscript -e "reticulate::install_miniconda()"
+
+      - name: Find Miniconda on macOS
+        if: runner.os == 'macOS'
+        run: echo "options(reticulate.conda_binary = reticulate:::miniconda_conda())" >> .Rprofile
+
+      - name: Install TensorFlow
+        run: |
+          reticulate::conda_create('r-reticulate', packages = c('python==3.6.9'))
+          tensorflow::install_tensorflow(version='1.14.0')
+        shell: Rscript {0}
+
       - name: Session info
         run: |
           options(width = 100)
