Re-export required_pkgs generic and added parsnip methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -62,6 +62,8 @@ S3method(print,svm_poly)
 S3method(print,svm_rbf)
 S3method(req_pkgs,model_fit)
 S3method(req_pkgs,model_spec)
+S3method(required_pkgs,model_fit)
+S3method(required_pkgs,model_spec)
 S3method(tidy,"_elnet")
 S3method(tidy,"_fishnet")
 S3method(tidy,"_lognet")
@@ -175,6 +177,7 @@ export(prepare_data)
 export(rand_forest)
 export(repair_call)
 export(req_pkgs)
+export(required_pkgs)
 export(rpart_train)
 export(set_args)
 export(set_dependency)
@@ -228,6 +231,7 @@ importFrom(generics,augment)
 importFrom(generics,fit)
 importFrom(generics,fit_xy)
 importFrom(generics,glance)
+importFrom(generics,required_pkgs)
 importFrom(generics,tidy)
 importFrom(generics,varying_args)
 importFrom(glue,glue_collapse)
