re-organize linear_reg documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -122,6 +122,7 @@ export(control_parsnip)
 export(convert_stan_interval)
 export(decision_tree)
 export(eval_args)
+export(find_engine_files)
 export(fit)
 export(fit.model_spec)
 export(fit_control)
