add `proportional_hazards` model spec (formerly `censored::cox_reg()`)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,7 @@ S3method(print,model_spec)
 S3method(print,multinom_reg)
 S3method(print,nearest_neighbor)
 S3method(print,nullmodel)
+S3method(print,proportional_hazards)
 S3method(print,rand_forest)
 S3method(print,surv_reg)
 S3method(print,survival_reg)
@@ -95,6 +96,7 @@ S3method(update,mars)
 S3method(update,mlp)
 S3method(update,multinom_reg)
 S3method(update,nearest_neighbor)
+S3method(update,proportional_hazards)
 S3method(update,rand_forest)
 S3method(update,surv_reg)
 S3method(update,survival_reg)
@@ -176,6 +178,7 @@ export(predict_survival.model_fit)
 export(predict_time)
 export(predict_time.model_fit)
 export(prepare_data)
+export(proportional_hazards)
 export(rand_forest)
 export(repair_call)
 export(req_pkgs)
