export `convert_form_to_xy_*()` functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -124,6 +124,8 @@ export(check_empty_ellipse)
 export(check_final_param)
 export(contr_one_hot)
 export(control_parsnip)
+export(convert_form_to_xy_fit)
+export(convert_form_to_xy_new)
 export(convert_stan_interval)
 export(decision_tree)
 export(eval_args)
