export `convert_xy_to_form_*()` functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -127,6 +127,8 @@ export(control_parsnip)
 export(convert_form_to_xy_fit)
 export(convert_form_to_xy_new)
 export(convert_stan_interval)
+export(convert_xy_to_form_fit)
+export(convert_xy_to_form_new)
 export(decision_tree)
 export(eval_args)
 export(fit)
